[package]
name = "bingoserver"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-identity = "0.8.0"
actix-session = { version = "0.10.1", features = ["cookie-session"] }
actix-web = "4.3.1"
actix-ws = "0.3.0"
base64 = "0.22.1"
chrono = "0.4.38"
env_logger = "0.11.5"
futures-util = "0.3.31"
log = "0.4.22"
rand = "0.8.5"
serde = "1.0.215"
serde_json = "1.0.133"
shuttle-actix-web = "0.49.0"
shuttle-runtime = "0.49.0"
tokio = "1.26.0"
