[package]
name = "bingoserver"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-identity = "0.8.0"
actix-session = { version = "0.10.1", features = ["cookie-session"] }
actix-web = "4.3.1"
actix-ws = "0.3.0"
anyhow = "1.0.93"
argon2 = "0.5.3"
base64 = "0.22.1"
chrono = "0.4.38"
env_logger = "0.11.5"
futures-util = "0.3.31"
log = "0.4.22"
rand = "0.9.0"
serde = "1.0.215"
serde_json = "1.0.133"
shuttle-actix-web = "0.52.0"
shuttle-runtime = { version = "0.52.0", features = ["setup-otel-exporter"] }
shuttle-shared-db = { version = "0.52.0", features = ["postgres", "sqlx", "sqlx-native-tls"] }
sqlx = { version = "0.8.2", features = ["uuid"] }
tokio = "1.26.0"
tracing = "0.1.41"
uuid = { version = "1.15.1", features = ["serde"] }

